fp-macros/tests/ui/duplicate_document_returns.rs
//! Test: Duplicate #[document_returns] on a function

use fp_macros::document_returns;

#[document_returns("The result")]
#[document_returns("The result")]
fn foo() -> i32 {
	42
}

fn main() {}
